beyond1lte_defconfig: Enable moro sound driver
Change-Id: I1f20cfe08d250399db731be71eadd5df2c49943e

--- a/arch/arm64/configs/exynos9820-beyond1lte_defconfig
+++ b/arch/arm64/configs/exynos9820-beyond1lte_defconfig
@@ -3754,6 +3754,7 @@ CONFIG_SND_SOC_COMPRESS=y
 # CONFIG_SND_I2S_HI6210_I2S is not set
 # CONFIG_SND_SOC_IMG is not set
 CONFIG_SND_SOC_SAMSUNG=y
+CONFIG_MORO_SOUND=y
 # CONFIG_SND_SAMSUNG_PCM is not set
 # CONFIG_SND_SAMSUNG_SPDIF is not set
 # CONFIG_SND_SAMSUNG_I2S is not set
